; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/ipvs/extr_ip_vs_lblcr.c_ip_vs_dest_set_erase.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/ipvs/extr_ip_vs_lblcr.c_ip_vs_dest_set_erase.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ip_vs_dest_set = type { i32, i32, %struct.ip_vs_dest_list* }
%struct.ip_vs_dest_list = type { %struct.ip_vs_dest_list*, %struct.ip_vs_dest* }
%struct.ip_vs_dest = type { i32 }

@jiffies = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ip_vs_dest_set*, %struct.ip_vs_dest*)* @ip_vs_dest_set_erase to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ip_vs_dest_set_erase(%struct.ip_vs_dest_set* %0, %struct.ip_vs_dest* %1) #0 {
  %3 = alloca %struct.ip_vs_dest_set*, align 8
  %4 = alloca %struct.ip_vs_dest*, align 8
  %5 = alloca %struct.ip_vs_dest_list*, align 8
  %6 = alloca %struct.ip_vs_dest_list**, align 8
  store %struct.ip_vs_dest_set* %0, %struct.ip_vs_dest_set** %3, align 8
  store %struct.ip_vs_dest* %1, %struct.ip_vs_dest** %4, align 8
  %7 = load %struct.ip_vs_dest_set*, %struct.ip_vs_dest_set** %3, align 8
  %8 = getelementptr inbounds %struct.ip_vs_dest_set, %struct.ip_vs_dest_set* %7, i32 0, i32 2
  store %struct.ip_vs_dest_list** %8, %struct.ip_vs_dest_list*** %6, align 8
  %9 = load %struct.ip_vs_dest_list**, %struct.ip_vs_dest_list*** %6, align 8
  %10 = load %struct.ip_vs_dest_list*, %struct.ip_vs_dest_list** %9, align 8
  store %struct.ip_vs_dest_list* %10, %struct.ip_vs_dest_list** %5, align 8
  br label %11

11:                                               ; preds = %41, %2
  %12 = load %struct.ip_vs_dest_list*, %struct.ip_vs_dest_list** %5, align 8
  %13 = icmp ne %struct.ip_vs_dest_list* %12, null
  br i1 %13, label %14, label %44

14:                                               ; preds = %11
  %15 = load %struct.ip_vs_dest_list*, %struct.ip_vs_dest_list** %5, align 8
  %16 = getelementptr inbounds %struct.ip_vs_dest_list, %struct.ip_vs_dest_list* %15, i32 0, i32 1
  %17 = load %struct.ip_vs_dest*, %struct.ip_vs_dest** %16, align 8
  %18 = load %struct.ip_vs_dest*, %struct.ip_vs_dest** %4, align 8
  %19 = icmp eq %struct.ip_vs_dest* %17, %18
  br i1 %19, label %20, label %38

20:                                               ; preds = %14
  %21 = load %struct.ip_vs_dest_list*, %struct.ip_vs_dest_list** %5, align 8
  %22 = getelementptr inbounds %struct.ip_vs_dest_list, %struct.ip_vs_dest_list* %21, i32 0, i32 0
  %23 = load %struct.ip_vs_dest_list*, %struct.ip_vs_dest_list** %22, align 8
  %24 = load %struct.ip_vs_dest_list**, %struct.ip_vs_dest_list*** %6, align 8
  store %struct.ip_vs_dest_list* %23, %struct.ip_vs_dest_list** %24, align 8
  %25 = load %struct.ip_vs_dest_set*, %struct.ip_vs_dest_set** %3, align 8
  %26 = getelementptr inbounds %struct.ip_vs_dest_set, %struct.ip_vs_dest_set* %25, i32 0, i32 1
  %27 = call i32 @atomic_dec(i32* %26)
  %28 = load i32, i32* @jiffies, align 4
  %29 = load %struct.ip_vs_dest_set*, %struct.ip_vs_dest_set** %3, align 8
  %30 = getelementptr inbounds %struct.ip_vs_dest_set, %struct.ip_vs_dest_set* %29, i32 0, i32 0
  store i32 %28, i32* %30, align 8
  %31 = load %struct.ip_vs_dest_list*, %struct.ip_vs_dest_list** %5, align 8
  %32 = getelementptr inbounds %struct.ip_vs_dest_list, %struct.ip_vs_dest_list* %31, i32 0, i32 1
  %33 = load %struct.ip_vs_dest*, %struct.ip_vs_dest** %32, align 8
  %34 = getelementptr inbounds %struct.ip_vs_dest, %struct.ip_vs_dest* %33, i32 0, i32 0
  %35 = call i32 @atomic_dec(i32* %34)
  %36 = load %struct.ip_vs_dest_list*, %struct.ip_vs_dest_list** %5, align 8
  %37 = call i32 @kfree(%struct.ip_vs_dest_list* %36)
  br label %44

38:                                               ; preds = %14
  %39 = load %struct.ip_vs_dest_list*, %struct.ip_vs_dest_list** %5, align 8
  %40 = getelementptr inbounds %struct.ip_vs_dest_list, %struct.ip_vs_dest_list* %39, i32 0, i32 0
  store %struct.ip_vs_dest_list** %40, %struct.ip_vs_dest_list*** %6, align 8
  br label %41

41:                                               ; preds = %38
  %42 = load %struct.ip_vs_dest_list**, %struct.ip_vs_dest_list*** %6, align 8
  %43 = load %struct.ip_vs_dest_list*, %struct.ip_vs_dest_list** %42, align 8
  store %struct.ip_vs_dest_list* %43, %struct.ip_vs_dest_list** %5, align 8
  br label %11

44:                                               ; preds = %20, %11
  ret void
}

declare dso_local i32 @atomic_dec(i32*) #1

declare dso_local i32 @kfree(%struct.ip_vs_dest_list*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
